Remove redundant DIRECT_EXECUTOR attribute